--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   "author": "Pranav Ghodake",
   "license": "ISC",
   "dependencies": {
+    "bootstrap": "^3.4.1",
     "dotenv": "^16.4.5",
+    "ejs": "^3.1.10",
     "express": "^4.21.1",
+    "jquery": "^3.7.1",
     "mongoose": "^8.12.0",
     "nodemon": "^3.1.7",
     "pluralize": "^8.0.0"
